--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-    "name": "my-node-app",
-    "version": "1.0.0",
-    "description": "A basic Node.js app",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js"
-    },
-    "dependencies": {
-      "express": "^4.17.1"
-    }
+  "name": "my-node-app",
+  "version": "1.0.0",
+  "description": "A basic Node.js app",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
-  
+}
